// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.server.encryptedcookies;

option go_package = "go.chromium.org/luci/server/encryptedcookies/internal/encryptedcookiespb";

// OpenIDState is encrypted and used as `state` in OpenID Connect protocol.
message OpenIDState {
  bytes session_id = 1;     // the future session ID (must not exist yet)
  bytes nonce = 2;          // random string used as `nonce` in the protocol
  string code_verifier = 3; // random string used in PKCE protocol
  string dest_host = 4;     // the destination redirect host
  string dest_path = 5;     // the destination redirect path
  // the scopes that were requested in the authorization request, in addition
  // to the default scopes (openid email profile).
  repeated string additional_scopes = 6;
}
